# minesweeper

./: Cargo.toml  README.md  index.html
src/: core.rs  difficulty.rs  lib.rs  persistence.rs  ui.rs
static/: app.css  manifest.json  sw.js
