[package]
name = "minesweeper"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
  "Window",
  "Document",
  "Element",
  "Node",
  "HtmlElement",
  "HtmlInputElement",
  "HtmlSelectElement",
  "Event",
  "KeyboardEvent",
  "MouseEvent",
  "PointerEvent",
  "Storage",
  "console",
]

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
